--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -6,7 +6,7 @@
 	<!-- "build" is the default when subprojects are directly targetted -->
 	<property name="target" value="build" />
 
-	<target name="dist" depends="main, doc, samples" description="Run the distributions">
+	<target name="dist" depends="main, diff-report, doc, samples" description="Run the distributions">
 		<gwt.ant dir="distro-source" />
 	</target>
 
@@ -218,4 +218,44 @@ if (!(isc.loadSkin || window.loadSkin)) {
 
     </target>		
 
+	<target name="diff-report" depends="main">
+
+		<get src="http://www.smartclient.com/smartgwt/builds/release-${smartgwt.previous_version}/smartgwt.jar" 
+		    dest="${smartgwt.build.out}/smartgwt-${smartgwt.previous_version}.jar" 
+		    verbose="false"
+		    usetimestamp="true"/>
+		
+		<property name="dependencyfinder.home" location="${smartgwt.tools.lib}/dependency-finder/1.2.1" />
+		<taskdef name="jarjardiff" classname="com.jeantessier.dependencyfinder.ant.JarJarDiff">
+			<classpath>
+				<pathelement location="${dependencyfinder.home}/DependencyFinder.jar" />
+				<pathelement location="${dependencyfinder.home}/jakarta-oro.jar" />
+				<pathelement location="${dependencyfinder.home}/log4j.jar" />
+			</classpath>
+		</taskdef>
+				
+		<property name="PREVIOUS_JAR" value="${smartgwt.build.out}/smartgwt-${smartgwt.previous_version}.jar"/>
+
+        <available file="${PREVIOUS_JAR}" type="file" property="oldjar.exists"/>
+
+        <fail unless="oldjar.exists"
+              message="Cannot find file '${PREVIOUS_JAR}' "/>
+
+	    <jarjardiff destfile="${smartgwt.build.out}/diff.xml"
+	                name="SmartGWT"
+	                oldlabel="${smartgwt.previous_version}"
+	                newlabel="${smartgwt.version}">
+	        <old>
+	            <pathelement location="${PREVIOUS_JAR}"/>
+	        </old>
+	        <new>
+	            <pathelement location="${project.lib}"/>
+	        </new>
+	    </jarjardiff>
+	    <xslt style="${dependencyfinder.home}/etc/DiffToHTML.xsl"
+	          in="${smartgwt.build.out}/diff.xml"
+	          out="${smartgwt.root}/distro-source/core/src/api-changes.html"/>
+			
+	</target>
+	
 </project>
