--- a/distro-source/windows/build.xml
+++ b/distro-source/windows/build.xml
@@ -7,6 +7,9 @@
 		<!-- TODO: figure out how to share most of this across platforms -->
 
 		<copy file="${smartgwt.tools.lib}/css/javadoc/stylesheet.css" todir="${smartgwt.build.out}/doc/javadoc" overwrite="true"/>
+		<copy file="${smartgwt.root}/samples/showcase/build-distro.xml" tofile="${smartgwt.build.out}/Samples/showcase/build.xml" overwrite="true"/>
+		<copy file="${smartgwt.root}/samples/showcase/README.txt" todir="${smartgwt.build.out}/Samples/showcase/" overwrite="true"/>
+
 
 		<mkdir dir="${smartgwt.build.dist}" />
 		<zip destfile="${project.dist}">
@@ -20,10 +23,16 @@
 			<zipfileset dir="src" prefix="${project.distname}" />
 
 			<zipfileset dir="${smartgwt.root}/samples" prefix="${project.distname}">
-				<include name="helloworld"/>
-				<include name="helloworld/**"/>
-				<exclude name="helloworld/build.xml" />
-				<exclude name="helloworld/*.iml" />
+				<include name="helloworld-1.5"/>
+				<include name="helloworld-1.5/**"/>
+				<exclude name="helloworld-1.5/build.xml" />
+				<exclude name="helloworld-1.5/*.iml" />
+			</zipfileset>
+
+			<zipfileset dir="${smartgwt.root}/samples" prefix="${project.distname}">
+				<include name="helloworld-1.6"/>
+				<include name="helloworld-1.6/**"/>
+				<exclude name="helloworld-1.6/*.iml" />
 			</zipfileset>
 
 			<!-- doc -->
@@ -34,27 +43,25 @@
 				<include name="doc/javadoc/**" />
 			</zipfileset>
 
+            <zipfileset file="${smartgwt.build.out}/Samples/showcase/showcase.war" prefix="${project.distname}" />
 
 			<!-- samples -->
 			<zipfileset dir="${smartgwt.build.out}" prefix="${project.distname}">
 				<include name="samples" />
 				<include name="samples/*" />
+				<include name="samples/**/build.xml" />
+				<include name="samples/**/README.txt" />
 				<include name="samples/*/src/**" />
-				<!--<include name="samples/*/bin/**" />-->
-                <include name="samples/*/www/**" />
+				<include name="samples/*/war/**" />
             </zipfileset>
 			<!--<zipfileset dir="${smartgwt.build.out}/samples-scripts/${dist.platform}" prefix="${project.distname}/samples">
 				<include name="*/*-compile.cmd" />
 				<include name="*/*-shell.cmd" />
 			</zipfileset>-->
 		</zip>
+		
+        <mkdir dir="${smartgwt.build.staging}" />
+        <unzip src="${project.dist}" dest="${smartgwt.build.staging}" />
 
-		<if>
-			<isset property="build.host.iswindows" />
-			<then>
-				<mkdir dir="${smartgwt.build.staging}" />
-				<unzip src="${project.dist}" dest="${smartgwt.build.staging}" />
-			</then>
-		</if>
 	</target>
 </project>
