--- a/trunk/samples/showcase/war/WEB-INF/web.xml
+++ b/trunk/samples/showcase/war/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 
  <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>Showcase.html</welcome-file>
+    <welcome-file>index.html</welcome-file>
   </welcome-file-list>
 
 </web-app>
