--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -72,50 +72,57 @@
         <zip destfile="${smartgwt.tools.lib}/sc/${SC_VER}/smartclient.jar">
             <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/modules" includes="*.js"
                         prefix="com/smartclient/public/sc/modules"/>
-            <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/development"
-                        includes="ISC_DBConsole.js,ISC_DeveloperConsole.js,ISC_DocViewer.js,ISC_FileViewer.js,ISC_FileLoader.js,ISC_SyntaxHiliter.js,ISC_Tools.js,ISC_Core.js,ISC_Foundation.js,ISC_Containers.js,ISC_Grids.js,ISC_Forms.js,ISC_DataBinding.js"
-                        prefix="com/smartclient/public/sc/system/development"/>
+
+            <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/development"                        includes="ISC_DBConsole.js,ISC_DeveloperConsole.js,ISC_DocViewer.js,ISC_FileViewer.js,ISC_FileLoader.js,ISC_SyntaxHiliter.js,ISC_Tools.js,ISC_Core.js,ISC_Foundation.js,ISC_Containers.js,ISC_Grids.js,ISC_Forms.js,ISC_DataBinding.js"
+                        prefix="com/smartclient/tools/public/sc/system/development"/>
+
             <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/helpers" includes="printFrame.*,empty.html,*.css,*.svg"
-                        prefix="com/smartclient/public/sc/system/helpers"/>
+                        prefix="com/smartclient/debug/public/sc/system/helpers"/>
+		    <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/helpers" includes="printFrame.*,empty.html,*.css,*.svg"
+			            prefix="com/smartclient/public/sc/system/helpers"/>
+
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/modules" includes="*.js"
-                        prefix="com/smartclient/public/sc/modules-debug"/>
+                        prefix="com/smartclient/debug/public/sc/modules-debug"/>
+
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/schema" includes="*.xml"
                         prefix="com/smartclient/public/sc/schema"/>
 
 
             <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/schema" includes="*.xsl"
+                        prefix="com/smartclient/debug/public/sc/system/schema"/>
+
+            <zipfileset dir="${SC_HOME}/smartclientSDK/isomorphic/system/schema" includes="*.xsl"
                         prefix="com/smartclient/public/sc/system/schema"/>
 
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/application" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/application"/>
+                        prefix="com/smartclient/debug/public/sc/client/application"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/browser" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/browser"/>
+                        prefix="com/smartclient/debug/public/sc/client/browser"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/communications" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/communications"/>
+                        prefix="com/smartclient/debug/public/sc/client/communications"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/debug" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/debug"/>
+                        prefix="com/smartclient/debug/public/sc/client/debug"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/event" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/event"/>
+                        prefix="com/smartclient/debug/public/sc/client/event"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/language" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/language"/>
+                        prefix="com/smartclient/debug/public/sc/client/language"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/standalone" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/standalone"/>
+                        prefix="com/smartclient/debug/public/sc/client/standalone"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/tools" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/tools"/>
+                        prefix="com/smartclient/debug/public/sc/client/tools"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/widgets" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/widgets"/>
+                        prefix="com/smartclient/debug/public/sc/client/widgets"/>
             <zipfileset dir="${SC_HOME}/smartclientSDK/source/client/widgets/form" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/widgets/form"/>
+                        prefix="com/smartclient/debug/public/sc/client/widgets/form"/>
 
             <zipfileset dir="${smartgwt.build.out}/temp/schema" includes="*.js"
-                        prefix="com/smartclient/public/sc/client/schema"/>
-
+                        prefix="com/smartclient/debug/public/sc/client/schema"/>
 
             <zipfileset dir="${smartgwt.build.out}/temp" includes="initsc.js"
                         prefix="com/smartclient/public/sc"/>
 
             <zipfileset dir="${smartgwt.build.out}/temp" includes="Log.html"
-                        prefix="com/smartclient/public/sc/system/helpers"/>
+                        prefix="com/smartclient/tools/public/sc/system/helpers"/>
 
             <zipfileset dirmode="755" filemode="644" src="${smartgwt.tools.lib}/sc/smartclient_tpl.jar"/>
 						
