--- a/trunk/main/build.xml
+++ b/trunk/main/build.xml
@@ -51,7 +51,7 @@
         </gwt.javac>
     </target>
 
-    <target name="build" depends="compile" description="Build and package this project">
+    <target name="build" depends="write_ver,compile" description="Build and package this project">
         <mkdir dir="${smartgwt.build.lib}"/>
         <gwt.jar>
             <fileset dir="src">
@@ -115,5 +115,65 @@
         <delete dir="${project.build}"/>
         <delete file="${project.lib}"/>
     </target>
+	
+	<target name="write_ver">
+  <tstamp>
+      <format property="build_date" pattern="MM/dd/yyyy hh:mm Z"/>
+  </tstamp>
 
+	        <echo file="src/com/smartgwt/client/Version.java"><![CDATA[
+/*
+ * SmartGWT (GWT for SmartClient)
+ * Copyright 2008 and beyond, Isomorphic Software, Inc.
+ *
+ * SmartGWT is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License version 3
+ * as published by the Free Software Foundation.  SmartGWT is also
+ * available under typical commercial license terms - see
+ * http://smartclient.com/license
+ *
+ * This software is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Lesser General Public License for more details.
+ */
+
+package com.smartgwt.client;
+
+import java.util.Date;
+import com.google.gwt.i18n.client.DateTimeFormat;
+
+/**
+ * Class that returns meta information like version number, major version, minor version and build date.
+ */
+public final class Version {
+    /**
+     * @return the library version
+     */
+    public static String getVersion() {
+        return "${smartgwt.version}";
+    }
+
+    /**
+     * @return the library major version
+     */
+    public static String getMajor() {
+        return "${smartgwt.version.major}";
+    }
+
+    /**
+     * @return the library minor version
+     */
+    public static String getMinor() {
+        return "${smartgwt.version.minor}";
+    }
+
+    /**
+     * @return the library build time
+     */
+    public static Date getBuildDate() {
+        return DateTimeFormat.getFormat("MM/dd/yyyy hh:mm Z").parse("${build_date}");
+    }
+}]]></echo>
+	    </target>
 </project>
